--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -121,3 +121,34 @@ indices:
       products:
         select: head > meta[name="products"]
         value: attribute(el, "content")
+  download-library:
+    include:
+      - /site/resources/download-library/**
+    exclude: *excludes
+    target: /site/resources/download-library/query-index.json
+    properties:
+      title:
+        select: head > meta[property="og:title"]
+        value: attribute(el, "content")
+      image:
+        select: head > meta[property="og:image"]
+        value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
+      description:
+        select: head > meta[name="description"]
+        value: attribute(el, "content")
+      date:
+        select: head > meta[name="date"]
+        value: attribute(el, "content")
+        fallback: parseTimestamp(headers["last-modified"], "ddd, DD MMM YYYY hh:mm:ss GMT")
+      lastModified:
+        select: none
+        value: parseTimestamp(headers["last-modified"], "ddd, DD MMM YYYY hh:mm:ss GMT")
+      tags:
+        select: head > meta[name="article:tag"]
+        value: attribute(el, "content")
+      category:
+        select: head > meta[name="category"]
+        value: attribute(el, "content")
+      products:
+        select: head > meta[name="products"]
+        value: attribute(el, "content")
