--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -135,7 +135,7 @@ indices:
         value: attribute(el, "content")
       date:
         select: head > meta[name="date"]
-        value: attribute(el, "content")
+        value: attribute(el, "content") || parseTimestamp(headers["last-modified"], "ddd, DD MMM YYYY hh:mm:ss GMT")
       image:
         select: head > meta[property="og:image"]
         value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
