--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -135,7 +135,7 @@ indices:
         value: attribute(el, "content")
       date:
         select: head > meta[name="date"]
-        value: attribute(el, "content")
+        value: parseTimestamp(attribute(el, "content"), "ddd, DD MMM YYYY hh:mm:ss GMT")
       image:
         select: head > meta[property="og:image"]
         value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
@@ -151,3 +151,34 @@ indices:
       products:
         select: head > meta[name="products"]
         value: attribute(el, "content")
+  helpful-resources:
+    include:
+      - /site/resources/professional-development/get-helpful-resources/**
+    exclude: *excludes
+    target: /site/resources/professional-development/get-helpful-resources/query-index.json
+    properties:
+      title:
+        select: head > meta[property="og:title"]
+        value: attribute(el, "content")
+      description:
+        select: head > meta[name="description"]
+        value: attribute(el, "content")
+      date:
+        select: head > meta[name="date"]
+        value: "{{ parseTimestamp(attribute(el, "content"), "ddd, DD MMM YYYY hh:mm:ss GMT")  | default(parseTimestamp(headers['last-modified'], 'ddd, DD MMM YYYY hh:mm:ss GMT')) }}"
+      image:
+        select: head > meta[property="og:image"]
+        value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
+      lastModified:
+        select: none
+        value: parseTimestamp(headers["last-modified"], "ddd, DD MMM YYYY hh:mm:ss GMT")
+      tags:
+        select: head > meta[name="article:tag"]
+        value: attribute(el, "content")
+      category:
+        select: head > meta[name="category"]
+        value: attribute(el, "content")
+      products:
+        select: head > meta[name="products"]
+        value: attribute(el, "content")
+  
