--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -165,7 +165,7 @@ indices:
         value: attribute(el, "content")
       date:
         select: head > meta[name="date"]
-        value: "{{ parseTimestamp(attribute(el, "content"), "ddd, DD MMM YYYY hh:mm:ss GMT")  | default(parseTimestamp(headers['last-modified'], 'ddd, DD MMM YYYY hh:mm:ss GMT')) }}"
+        value: parseTimestamp(attribute(el, "content"), "ddd, DD MMM YYYY hh:mm:ss GMT")
       image:
         select: head > meta[property="og:image"]
         value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
