--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -220,3 +220,18 @@ indices:
       products:
         select: head > meta[name="products"]
         value: attribute(el, "content")
+authors:
+    include:
+      - /site/resources/breakroom-blog/authors**
+    exclude: *excludes
+    target: /site/resources/breakroom-blog/authors/query-index.json
+    properties:
+      name:
+        select: head > meta[property="author"]
+        value: attribute(el, "content")
+      title:
+        select: head > meta[property="author-title"]
+        value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
+      description:
+        select: head > meta[name="description"]
+        value: attribute(el, "content")
