no S on exclude (#377)
* no S on exclude

* testing

* single quotes add

* reverting

* no longer getting an error

---------

Co-authored-by: Charity Helms <chelms@adobe.com>

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -184,8 +184,13 @@ indices:
   breakroom-blog:
     include:
       - /site/resources/breakroom-blog/**
-    exclude: 
-      - *excludes
+    exclude:
+      - '**/drafts/**'
+      - '**/images/**'
+      - '**/icons/**'
+      - '**/test/**'
+      - '**/fragments/**'
+      - '**/user_area/**'
       - /site/resources/breakroom-blog/authors/**
     target: /site/resources/breakroom-blog/query-index.json
     properties:
